# gocator-sample

./: .clang-format  .gitignore  CMakeLists.txt  README.md
converter/: CMakeLists.txt
converter/include/: main.hpp  raw_message.hpp  reduced.hpp
converter/src/: main.cpp  raw_message.cpp  reduced.cpp
include/: gocator.hpp  raw_message.hpp
recorder/: CMakeLists.txt
recorder/include/: raw_message.hpp
recorder/src/: main.cpp  raw_message.cpp
src/: gocator.cpp  gocator_convert.cpp  main.cpp  raw_message.cpp  snapshot_example.cpp
